--- a/writings/three/sketch.org
+++ b/writings/three/sketch.org
@@ -1,5 +1,89 @@
+
 * sketches
-** reverse outline
+** reverse outline 2.17.26
+
+- sex
+  - sex is so pleasurable, it overcomes desire to survive as humans
+    - sex is made pleasurable due to union it offers
+  - where does the union take place? the mind or the body?
+    - a physiological phenomenon
+  - examine response to fear, placing unknown into schemas of the
+    known: medusa
+    - in contrast to hierarchical methods, the Oankali genetically
+      incorporate difference
+    - ramifications on consent & control, toward collectivity
+  - the flesh offers both creates fear (difference) and potential for
+    connection (pleasure)
+
+| claim                                                            | function                                   |
+|------------------------------------------------------------------+--------------------------------------------|
+| *sex*                                                            |                                            |
+| 1. lilith is seduced by pleasurable sex                          | opening example for chapter: seduction     |
+| 2. lilith succumbs to pleasure despite resisting colonization    | contextualizes example wrt colonization    |
+| 3. critics debate role of bodily drives                          | adds critical context for seduction        |
+| 33. in sex scene, pleasure through union                         | shows example of union                     |
+| 34. the union proffers the body to the mind                      | makes key point about body/mind conflation |
+| 5. non-union experienced in fear of the other                    | shows example of non-union/xenophobia      |
+| + add transition: moving from pleasure to fear                   |                                            |
+| 6. "medusa" indicates fear of the unknown                        | adds critical context for xenophobia       |
+| 7. Medusa indicates human hierarchies to incorporate difference  | develops thread of xenophobia              |
+| 8. Oankali use gene trade to incorportate difference             | opens thread on consent/control            |
+| + on consent w/in collective forms                               |                                            |
+| 9. the paradox of the flesh, both pleasure and fear              | asserts main hypothesis on flesh           |
+| 4. overview of chapter                                           | offers overview of argument                |
+| 10. source material expands with nonqueer examples               | opens argument on expanding "queer"        |
+|                                                                  |                                            |
+| *flesh*                                                          |                                            |
+| 11. introducing two fields that study materiality                | introducing theoretical frameworks         |
+| + add: lanugauge on surface -> screen effects                    |                                            |
+| 12. Blk Fem theorizes flesh as contradiction                     | introduces key concept of flesh            |
+| 13. opacity create multiple, opposing registers                  | analyzes one effect of surface             |
+| + add more analysis of block quote                               |                                            |
+| 14. reduction to surface stimulates signification                | analyzes another effect of surface         |
+| 15. surface contains unmappability: daguerrotype                 | analyzes another effect of surface         |
+| 16. media theory field, that media is immaterial                 | introduces media theory                    |
+| + add more on materiality, plant, hayles?                        |                                            |
+| 17. another field reads materiality in media                     | introduces media archaeology               |
+| 18. concept of "forensic materiality"                            | introduces key concept of forensic mat     |
+| + flesh out forensic materiality, plant, hayles?                 |                                            |
+| 21. concept of 'formal materiality'                              | introduces key concept of form mat         |
+| 19. signifiers flicker up the stack                              | one effect of materiality                  |
+| 20. as it moves, accumulates torque                              | another effect of materiality              |
+| 22. the more formalized, the more manipulable                    | another effect of materiality              |
+| 23. reading surface and screen effects                           | summarizing section                        |
+| + add: flesh theory allows us to read screen                     |                                            |
+| + add: reading themes of pleasure, control in elit               |                                            |
+|                                                                  |                                            |
+| *skin*                                                           |                                            |
+| INSERT 32: on reading surface effects into work?                 | setting up concepts for close reading      |
+| 24. introduces /skin/, digital love letter                       | introduces main source material            |
+| 25. work is built on deprecated software, NET art                | contextualizes software of work            |
+| + add: more on software stack, javascript                        |                                            |
+| + add: images of emulator                                        |                                            |
+| 26. describes animation, air.html surface layer                  | analyzes surface layer of one page         |
+| 27. close reading of source code, conditional                    | analyzes code layer                        |
+| 28. close reading shows freedom within constraints               | analyses both layers                       |
+| + add more analysis on theme of control                          |                                            |
+| 29. close reading of control.htm surface layer                   | analyzes surface layer of another page     |
+| 30. full message is contained in code layer                      | analyzes code layer                        |
+| 31. message is thus unmappable to the surface                    | analyzes both layers                       |
+| + add more analysis on theme of control                          |                                            |
+| 35. there are messages contained totally in code                 | analyzes code layer of another page        |
+| -> move 36-38 to the start of the section?                       |                                            |
+| 36. reduced to one channel, communication means more             | analysis of reduction/signification        |
+| 37. even in intimacy, there is doubt of reality                  | raises question about intimacy             |
+| 38. physical/cultural differences create obstacle                | key point about obstacle to intimacy       |
+| 39. the unknown acts as a bridge, creating intimacy              | closes thread on intimacy                  |
+| 40. displacement offers another level of materiality             | concludes displacement/materiality         |
+| + add: the unknown becomes a new layer for connection            |                                            |
+
+
+
+
+
+
+
+** reverse outline 12.20.25
 Goal: swift movement between ideas; well researched but unburdened by
 it; more close reading
 
